gap, checkbox register fix

--- a/src/pages/formPages/FormPageLayout/forms/_shared/shared.module.scss
+++ b/src/pages/formPages/FormPageLayout/forms/_shared/shared.module.scss
@@ -6,12 +6,12 @@
 
   .block {
     display: flex;
-    row-gap: 25px;
+    row-gap: 10px;
     column-gap: 10px;
     flex-wrap: wrap;
 
-    &:has(input[type="checkbox"]) {
-      row-gap: 10px;
+    &:not(:has(div[class=" css-w9q2zk-Input2"])) {
+      row-gap: 25px;
     }
 
     .blockHeader {
